finisshing the annotation with adding possibilty for  costom annotations